Bug 94906 - Copying text from article viewer doesn't work
Summary: Copying text from article viewer doesn't work
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (show other bugs)
Version: cvs
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-12-11 11:03 UTC by Frank Osterfeld
Modified: 2006-02-02 00:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Osterfeld 2004-12-11 11:03:49 UTC
You can't copy selected text in the article viewer to paste it elsewhere, since 
there is no copy action created for the viewer.
Comment 1 Frank Osterfeld 2004-12-21 21:05:16 UTC
CVS commit by osterfeld: 

Improve GUI merging of nested a bit. Works in standalone mode now, but still breaks in kontact. I guess we need the help of a 
KPart expert here (i.e. David ;-) ). 

Nice side effect: copy action works in article viewer now.
BUG: 94906


  A            articleviewer.rc   1.1
  M +1 -1      Makefile.am   1.57
  M +17 -10    akregator_part.cpp   1.121
  M +5 -3      akregator_part.h   1.51
  M +1 -3      akregator_part.rc   1.33
  M +34 -34    akregator_view.cpp   1.198
  M +5 -6      akregator_view.h   1.81
  M +1 -0      articleviewer.cpp   1.80
  M +1 -1      feedlist.h   1.4
  M +4 -30     pageviewer.cpp   1.23
  M +1 -4      pageviewer.h   1.17
  M +18 -11    pageviewer.rc   1.4
  M +30 -6     viewer.cpp   1.30
  M +11 -18    viewer.h   1.19



Comment 2 Oliver Grimm 2006-02-02 00:36:50 UTC
Bug was fixed in KDE 3.4.3

Bug is back in KDE 3.5.