Improve GUI merging of nested a bit. Works in standalone mode now, but still breaks in kontact. I guess we need the help of a KPart expert here (i.e. David ;-) ).

Nice side effect: copy action works in article viewer now.
BUG: 94906

svn path=/trunk/kdepim/akregator/; revision=372581